--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
 
 dependencies {
 
+    implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.2'
+
+
     // Core libraries
     implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
